<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>noah_bringup</name>
  <version>2.1.5</version>
  <description>
    ROS 2 launch scripts for starting the Noah
  </description>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>noah_description</exec_depend>
  <exec_depend>turtlebot3_node</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
