<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>noah_ignition</name>
  <version>0.1.0</version>
  <description>
    Launch Ignition Gazebo simulation with Noah robot.
  </description>
  <author email="franco.c@ekumenlabs.com">Franco Cipollone</author>
  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>
  <license file="../LICENSE"> BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_ign_gazebo</depend>

  <exec_depend>noah_description</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

