<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>noah_navigation</name>
  <version>0.1.0</version>
  <description>
    The noah_navigation package
  </description>

  <maintainer email="gonzalo@depedro.com.ar">Gonzalo de Pedro</maintainer>

  <license>TBD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_core</exec_depend>
  <exec_depend>nav2_dwb_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>nav2_rviz_plugins</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
