<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>noah_webots</name>
  <version>0.1.0</version>
  <description>Noah simulation in webots_ros2</description>
  <maintainer email="ignacio.davila@ekumenlabs.com">root</maintainer>
  <license file="LICENSE"> BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
